# sentinel

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
.github/workflows/: main.yml
components/esp32-button/include/: button.h
components/esp32-button/src/: button.c
components/esp_ghota/: CMakeLists.txt
components/esp_ghota/src/: esp_ghota.c
components/u8g2/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.c
main/common/: config.c  config.h  types.h
main/drivers/: i2c.c  i2c.h  modbus.c  modbus.h
main/io/: control.c  control.h  gate.c  gate.h  io.c  io.h  io_handler.c  ui_handler.c  ui_handler.h
main/wifi/: wifi.c
main/wireless/: rf.c  rf.h  wifi.c  wifi.h
